# brain-tumor-detector

./: .gitignore  ARCHITECTURE.md  BRAIN_MODEL_GUIDE.md  COMPREHENSIVE_TEST_REPORT.md  Dockerfile  HUMANIZATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  MEDICAL_SOFTWARE_FIXED.md  PHASE2_COMPLETE.md  PHASE3_STEP1_COMPLETE.md  PHASE3_STEP2_COMPLETE.md  PHASE3_STEP3_COMPLETE.md  README.md  TEST_REPORT_1_BACKEND_IMPORTS.txt  TEST_REPORT_2_WEBSOCKET_FUNCTIONALITY.txt  TEST_REPORT_3_ENHANCED_WEBSOCKET.txt  TEST_REPORT_4_CODE_QUALITY.txt  TEST_REPORT_5_PERFORMANCE.txt  TODO.md  WEBSOCKET_FIXED.md  WEBSOCKET_RESOLVED.md  dev_start.bat  docker-compose.yml  project-config.yaml  pyproject.toml  quick_start.bat  requirements-dev.txt  requirements-phase1.txt  requirements.txt  setup.py  stop_servers.bat  test-brain-model.js  websocket-test.html
.github/: copilot-instructions.md
.github/workflows/: ci.yml
api/: index.py
backend/: Dockerfile  main.py  main_old.py  mock_server.py  requirements.txt
backend/api/: models.py
backend/services/: __init__.py  enhanced_3d_service.py  model_service.py  visualization_service.py  visualization_service_old.py  websocket_manager.py
config/: nnunet_config.yaml  preprocessing.yaml  training.yaml  vit_config.yaml
docs/: ENHANCED_MODELS.md  INSTALLATION.md
frontend/: Dockerfile  next.config.js  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
legacy-backend/: __init__.py  main.py
notebooks/: getting_started.md
scripts/: download_data.py  train_phase1_models.py
tests/: README.md  test_backend_imports.py  test_code_quality.py  test_enhanced_websocket.py  test_performance.py  test_websocket_functionality.py
(+55 files in other folders)
